# singleton

./: Cargo.toml  README.md
src/: fmt.rs  lib.rs
